--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ typings/
 # dotenv environment variables file
 .env
 
+# ignore other files than POC files in the sound-bank
+text-to-speech/sound-bank/
